# temp

./: CMakeLists.txt
C/: 1.c  223123213232.c  2songuyentocungnhau.c  3848.c'.cpp  3cham15.c  4cham10pointer.c  4cham11.c  4cham12.c  4cham13.c  4cham14.c  4cham15.c  4cham15prac.c  4cham16(fail).c  4cham16.c  Untitled1.c  Untitled1.cpp  Untitled2.c  aboutpointer.c  bai3cham1.c  bai3cham13.c  bai3cham14.c  bai3cham15.c  bai3cham16.c  bai3cham17.c  bai3cham9.c  bai4cham10.c  bai4cham10kk.c  bai4cham10ww.c  bai4cham11.c  bai4cham13.c  bai4cham1contro.c  bai4cham1dungpointer.c  bai4cham2.c  bai4cham3.c  bai4cham4.c  bai4cham5.c  bai4cham6.c  bai4cham7.c  bai4cham8.c  bai4cham8ccc.c  (+62 more)
C/hoc c/: 2.c  bai3cham10.c  bai3cham10hehe.c  bai3cham11.c  bai3cham12.c  hoc c.sln  pratice1.c  random.c  tamgiaccan.c  tinhtongnsobangdequy.c
C/hoc c/hoc c/: hoc c.vcxproj  main.c
C/hoc c/hoc c/Debug/: hoc c.exe.recipe  hoc c.ilk  vc142.idb
C/hoc c/hoc c/Debug/hoc c.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  hoc c.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
