cmake_minimum_required(VERSION 3.20)
project(code)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(C)

add_executable(code
        "C/hoc c/hoc c/main.c"
        "C/hoc c/2.c"
        "C/hoc c/bai3cham10.c"
        "C/hoc c/bai3cham10hehe.c"
        "C/hoc c/bai3cham11.c"
        "C/hoc c/bai3cham12.c"
        "C/hoc c/pratice1.c"
        "C/hoc c/random.c"
        "C/hoc c/tamgiaccan.c"
        "C/hoc c/tinhtongnsobangdequy.c"
        C/1.c
        C/223123213232.c
        C/2songuyentocungnhau.c
        C/3848.c'.cpp
        C/aboutpointer.c
        C/bai3cham1.c
        C/bai3cham13.c
        C/bai3cham14.c
        C/bai3cham15.c
        C/bai3cham16.c
        C/bai3cham17.c
        C/bai3cham9.c
        C/bai4cham10.c
        C/bai4cham10kk.c
        C/bai4cham13.c
        C/bai4cham1contro.c
        C/bai4cham1dungpointer.c
        C/bai4cham1point.c
        C/bai4cham2.c
        C/bai4cham3.c
        C/bai4cham4.c
        C/bai4cham5.c
        C/bai4cham6.c
        C/bai4cham7.c
        C/bai4cham8.c
        C/bai4cham9.c
        C/bai4cham9dd.c
        C/bai4cham9ne.c
        C/baitap1.c
        C/baitapdequy.c
        C/bdasdmhjas.c
        C/bubblesort.c
        C/cacthuattoansapxepcoban.c
        C/cc1.c
        C/chech.c
        C/codelai4cham9.c
        C/de4cham11.c
        C/de4cham12.c
        C/dequyfibonacci.c
        C/giaithuadequy.c
        C/hinhchunhat.c
        C/innguocmang.c
        "C/kiem tra day fibonacci.c"
        C/lietkesonguyentodoanab.c
        C/mabg2.c
        C/mang1.c
        C/nto.c
        C/ontimkiemnhiphan.c
        C/pi.c
        C/ptbac2.c
        C/randomtest.c
        C/sapxepmang.c
        "C/so thuan ngich.c"
        C/solanxuathien1ptutrongmang.c
        C/sothuannghich.c
        C/tamgaicpascal.c
        C/tamgiac.c
        C/tamgiaccan.c
        C/tamgiacdoixung.c
        C/tamgiackocanbutvuong.c
        C/tamgiacvuongcan.c
        C/tempCodeRunnerFile.c
        C/testcc.c
        C/testchar.c
        C/testcontro.c
        C/testheheh.c
        C/testmang2chieu.c
        C/testpointerbai4cham1.c
        C/testxepmang.c
        "C/tim giai thua.c"
        "C/tim so chinh phuong.c"
        C/timkiemnhiphan.c
        C/timsothuannghich.c
        "C/tinh pi.c"
        "C/tinh so pi.c"
        C/tinhemux.c
        C/tinhsolonbenhattrongmang.c
        "C/tong tung so.c"
        C/tongsolemang1chieu.c
        C/traitim.c
        C/Untitled-1.c
        C/Untitled1.c
        C/Untitled1.cpp
        C/Untitled2.c
        C/Untitlssed1.c
        "C/viet n so nguyen to.c"
        C/xamm.c
        C/xuatmang2chieu.c)
